--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> 
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1.0">
-<link rel="stylesheet" href="stylesheet.css">
-<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<div class="main">
-<div class="image-div">
-<img src="./images/image-qr-code.png" alt="QR Code" width="200" class="QR">
-</div>
-<div class="content1">
-<h3 class="first-h"> Improve your font-end <br> skills by building projects </h3>
-</div>
-<div class="content2">
-<p class="second-h">Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next level</p?
-</div>
-</div>
-
-
-
+    <!-- # Card Qrcode-->
+    <div class="main">
+        <div class="image-div">
+            <!--  # Img Qrcode-->
+            <img src="./images/image-qr-code.png" alt="QR Code" width="200" class="QR">
+        </div>
+        <!-- # Body Card Qrcode -->
+        <div class="content1">
+            <h3 class="first-h"> Improve your font-end <br> skills by building projects </h3>
+        </div>
+        <div class="content2">
+            <p class="second-h">Scan the QR code to visit Frontend<br>Mentor and take your coding skills to<br>the next
+            level
+            </p>
+        </div>
+    </div>
 </body>
-
